--- a/core/static/css/main.css
+++ b/core/static/css/main.css
@@ -329,7 +329,7 @@ a.back-to-top:focus {
 }
 
 hr {
-  border-top: 1px dotted #ddd;
+  border-top: 1px solid #ddd;
 }
 
 /* ==========================================================================
