--- a/core/templates/features.html
+++ b/core/templates/features.html
@@ -8,33 +8,22 @@
       <div class="row">
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
           <div class="content-left">
+
+            {% for feature in features %}
+            {%if feature.lado == 'fadeInLeft' %}
             <div class="box-item wow fadeInLeft" data-wow-delay="0.3s">
               <span class="icon">
-                <i class="lni-rocket"></i>
+                <i class="{{ feature.icone }}"></i>
               </span>
               <div class="text">
-                <h4>Bootstrap 4 Based</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <h4>{{ feature.feature }}</h4>
+                <p>{{ feature.descricao }}</p>
               </div>
             </div>
-            <div class="box-item wow fadeInLeft" data-wow-delay="0.6s">
-              <span class="icon">
-                <i class="lni-laptop-phone"></i>
-              </span>
-              <div class="text">
-                <h4>Fully Responsive</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-            </div>
-            <div class="box-item wow fadeInLeft" data-wow-delay="0.9s">
-              <span class="icon">
-                <i class="lni-cog"></i>
-              </span>
-              <div class="text">
-                <h4>HTML5, CSS3 & SASS</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-              </div>
-            </div>
+
+            {% endif %}
+            {% endfor %}
+
           </div>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
@@ -44,33 +33,22 @@
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
           <div class="content-right">
+            
+            {% for feature in features %}
+            {%if feature.lado == 'fadeInRight' %}
             <div class="box-item wow fadeInRight" data-wow-delay="0.3s">
               <span class="icon">
-                <i class="lni-leaf"></i>
+                <i class="{{ feature.icone }}"></i>
               </span>
               <div class="text">
-                <h4>Modern Design</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                <h4>{{ feature.feature }}</h4>
+                <p>{{ feature.descricao }}</p>
               </div>
             </div>
-            <div class="box-item wow fadeInRight" data-wow-delay="0.6s">
-              <span class="icon">
-                <i class="lni-layers"></i>
-              </span>
-              <div class="text">
-                <h4>Multi-purpose Template</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-            </div>
-            <div class="box-item wow fadeInRight" data-wow-delay="0.9s">
-              <span class="icon">
-                <i class="lni-leaf"></i>
-              </span>
-              <div class="text">
-                <h4>Working Contact Form</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-            </div>
+
+            {% endif %}
+            {% endfor %}
+
           </div>
         </div>
       </div>
