--- a/core/templates/pricing.html
+++ b/core/templates/pricing.html
@@ -6,66 +6,30 @@
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       </div>
       <div class="row">
+        
+        {%for plano in planos %}
         <div class="col-lg-4 col-md-6 col-xs-12">
-          <div class="table wow fadeInLeft" data-wow-delay="1.2s">
+          <div class="table wow fadeInUp" id="{{ plano.destaque }}" data-wow-delay="1.0s">
             <div class="icon-box">
-              <i class="lni-package"></i>
+              <i class="{{ plano.icone }}"></i>
             </div>
             <div class="pricing-header">
-              <p class="price-value">$10<span> /mo</span></p>
+              <p class="price-value">${{ plano.preco }}<span> /mo</span></p>
             </div>
             <div class="title">
-              <h3>Pro</h3>
+              <h3>{{ plano.plano }}</h3>
             </div>
             <ul class="description">
-              <li>1 user</li>
-              <li>10 GB storage</li>
-              <li>Email support</li>
-              <li>Lifetime updates</li>
+              <li>{{plano.usuario}} user</li>
+              <li>{{plano.armazenamento}} GB storage</li>
+              <li>{{plano.suporte}}</li>
+              <li>{{plano.atualizacao}}</li>
             </ul>
             <button class="btn btn-common">Buy Now</button>
           </div> 
         </div>
-        <div class="col-lg-4 col-md-6 col-xs-12 active">
-          <div class="table wow fadeInUp" id="active-tb" data-wow-delay="1.2s">
-            <div class="icon-box">
-              <i class="lni-drop"></i>
-            </div>
-            <div class="pricing-header">
-              <p class="price-value">$35<span> /mo</span></p>
-            </div>
-            <div class="title">
-              <h3>Plus</h3>
-            </div>
-            <ul class="description">
-              <li>10 user</li>
-              <li>30 GB storage</li>
-              <li>Priority email support</li>
-              <li>Lifetime updates</li>
-            </ul>
-            <button class="btn btn-common">Buy Now</button>
-          </div> 
-        </div>
-        <div class="col-lg-4 col-md-6 col-xs-12">
-          <div class="table wow fadeInRight" data-wow-delay="1.2s">
-            <div class="icon-box">
-              <i class="lni-star"></i>
-            </div>
-            <div class="pricing-header">
-              <p class="price-value">$150<span> /mo</span></p>
-            </div>
-            <div class="title">
-              <h3>Premium</h3>
-            </div>
-            <ul class="description">
-              <li>Unlimited users</li>
-              <li>Unlimited storage</li>
-              <li>24/7 support</li>
-              <li>Lifetime updates</li>
-            </ul>
-            <button class="btn btn-common">Buy Now</button>
-          </div> 
-        </div>
+        {% endfor %}
+
       </div>
     </div>
   </section>
